demo-05/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-first-deployment
  namespace: demo-05
  labels:
    awesome: definitely
  annotations:
    description: my first deployment!!!
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      awesome: always
  template:
    metadata:
      labels:
        awesome: always
    spec:
      containers:
      - name: nginx
        image: bderickson/nginx:1.21.3-ip
        readinessProbe:
          httpGet:
            path: /
            port: 80
