demo-05/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-first-service
  namespace: demo-05
  labels:
    awesome: duh
  annotations:
    description: my first service!!!
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    awesome: always
